--- a/example/index.html
+++ b/example/index.html
@@ -17,11 +17,17 @@
 
     <title>Example</title>
 
+    <link rel="stylesheet" href="index.css"/>
+
   </head>
 
   <body>
 
     <div id="app">
+      <div id="select">
+        <select id="video_select"></select>
+        <select id="audio_select"></select>
+      </div>
       <video id="video" autoplay></video>
     </div>
 
